fix CSS and HTML in module "Basic.Introduction to CSS"

--- a/3 Basic.Introduction to CSS/vkontakte.html
+++ b/3 Basic.Introduction to CSS/vkontakte.html
@@ -140,7 +140,7 @@
 						<h1>Адрес Вашей электронной почты</h1>
 						<div class="passrow">
 							<div class="description">Текущий адрес:</div>
-							<div class="settingsrow">
+							<div class="settingsrow" id="currentemail">
 								a***@gmail.com
 							</div>
 						</div>
